--- a/src/sections/introduction.tex
+++ b/src/sections/introduction.tex
@@ -1,5 +1,5 @@
-This is a \LaTeX template document.\cite{small}
-
+%This is a \LaTeX template document.\cite{small}
+%
 The DecaWave positioning system in V207 offers a solution for ultrawide band radio-based positioning,
 via round-trip time of arrival distance estimation from a given tag to several anchors whose positions
 are known.
