--- a/src/sections/methods.tex
+++ b/src/sections/methods.tex
@@ -27,7 +27,8 @@ with some variance.
 Its raw data is also in some abstract form that must be processed by the flight controller unit (FCU)
 before use.
 Therefore, the velocity estimate from this sensor came from the FCU directly.
-Ultimately, it also has difficulty determining its velocity from the very self-similar floor of V207.
+Ultimately, it also has difficulty determining its velocity from the very self-similar floor of V207
+(See Figure~\ref{figure:laser}).
 Figure~\ref{figure:arkflow_performance_velocity} and~\ref{figure:arkflow_performance_position} show
 the noisy velocity and position estimates respectively.
 The velocity signal shows a sharp discontinuity in $t\in[65, 74]$,
@@ -75,14 +76,7 @@ where $t=t_i-t_{i-1}$ is the difference in timestamps between $d_i$ and $d_{i-1}
 At this point, the pixel position of the data is no longer important,
 so I reshape the 2D array into a 1D array in order to operate on it more easily.
 
-\begin{figure}[ht]
-	\centering
-	\includegraphics[width=0.6\textwidth]{./images/d455_sample.jpg}
-	\caption{A sample image from the D455.}
-	\label{figure:d455_sample}
-\end{figure}
 The edges around objects in the depth image are somewhat noisy and discontinuous,
-as shown in Figure~\ref{figure:d455_sample},
 and this can lead to high perceived pixel velocity in the depth dimension.
 To remove this particular type of noise, I simply remove all velocity estimates
 above a threshold of 1 m/s magnitude, decreasing the size of the velocity array $v_i$.
@@ -113,12 +107,18 @@ This method of forward/backward velocity estimation appeared promising enough to
 \end{figure}
 
 \subsection{Heading Estimation}
+\label{section:heading_estimation}
 
 The D455 has an inertial measurement unit with a gyroscope and accelerometer,
 for estimation of angular velocity and orientation to the gravity vector.
+Given the setup of the testing platform (a pallet jack) one can make the warranted assumption
+that the platform must be moving forward/backward or rotating in the yaw dimension only.
+Moreover, during testing this is guaranteed by simply constraining the platform to simple movements
+that are not antagonistic to the system.
+With this assumption, we can use the heading of the drone as a justification to ignore erroneous
+motion if it corresponds to the impossible side-to-side motion of the cart.
 
-
-\begin{figure}[h]
+\begin{figure}
 	\includegraphics[width=\linewidth]{./images/test3_depth_flow_depth_gyro.pdf}
 	\caption{A test of the gyroscope, showing a noise in $x$ and $z$ dimension,
 	and a large, correct spike in the $y$ dimension which corresponds to a rotation of the drone
@@ -126,4 +126,178 @@ for estimation of angular velocity and orientation to the gravity vector.
 	\label{figure:test3_depth_gyro}
 \end{figure}
 
+I have made a Kalman filter to estimate the heading of the drone relative to its starting heading.
+Its properties are as below:
 
+Initial state:
+$$X_0 =
+\left(
+\begin{matrix}
+	0 & 0
+\end{matrix}
+\right)
+$$
+
+State transition matrix, with a camera framerate of 15 Hz $\rightarrow dt=0.067s$:
+$$
+F =
+\left(
+\begin{matrix}
+	1 & \frac{1s}{15} \\
+	0 & 1
+\end{matrix}
+\right)
+=
+\left(
+\begin{matrix}
+	1 & 0.067 \\
+	0 & 1
+\end{matrix}
+\right)
+$$
+
+Measurement model (the gyro measures only speed, and we integrate to get position):
+$$H =
+\left(
+\begin{matrix}
+	0 & 1
+\end{matrix}
+\right)
+$$
+
+Covariance matrix:
+$$
+F =
+\left(
+\begin{matrix}
+	500 & 0\\
+	0 & 500
+\end{matrix}
+\right)
+$$
+
+Measurement noise:
+$$
+R =
+\left(
+\begin{matrix}
+	1000
+\end{matrix}
+\right)
+$$
+
+
+\subsection{Depth Camera Accelerometer}
+
+Figure~\ref{figure:test2_depth_accel} shows the raw accelerometer data from the D455,
+which seems to actually be clean, usable data.
+However, all it can really show is that the drone was \emph{relatively} upright for the duration of the tests,
+with the Y axis reading roughly $-9.8 \frac{m}{s^2}$, and the X axis hovering around $0 \frac{m}{s^2}$.
+The Z axis is slightly negative as a result of the camera (but not the drone) being tilted slightly
+downward on its gimbal throughout the tests.
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\linewidth]{./images/test2_depth_flow_depth_accel.pdf}
+	\caption{Example accelerometer data.}
+	\label{figure:test2_depth_accel}
+\end{figure}
+
+\subsection{Filtering Methods}
+
+I filter the raw DecaWave data with both a Kalman filter and a sequential importance filter,
+to attempt to increase its precision.
+Each component of the position $x,y$ uses a single, 1-dimensional filter.
+The Kalman filter definition is as below, and differs from the filter in Section~\ref{section:heading_estimation} in that its measurement model specifies that the measurements corresponds to the position,
+rather than the velocity, and they are otherwise similar except that one is working in terms of angles
+and the other in terms of Cartesian coordinates.
+
+Initial state:
+$$X_0 =
+\left(
+\begin{matrix}
+	0 & 0
+\end{matrix}
+\right)
+$$
+
+State transition matrix, with a camera framerate of 15 Hz $\rightarrow dt=0.067s$:
+$$
+F =
+\left(
+\begin{matrix}
+	1 & d_t \\
+	0 & 1
+\end{matrix}
+\right)
+$$
+
+Measurement model (the gyro measures only speed, and we integrate to get position):
+$$H =
+\left(
+\begin{matrix}
+	1 & 0
+\end{matrix}
+\right)
+$$
+
+Covariance matrix:
+$$
+F =
+\left(
+\begin{matrix}
+	5000 & 0 \\
+	0 & 5000
+\end{matrix}
+\right)
+$$
+
+Measurement noise:
+$$
+R =
+\left(
+\begin{matrix}
+	500
+\end{matrix}
+\right)
+$$
+
+The sequential importance filter is implemented exactly as in the file \texttt{sis.py} provided with
+the course, but with $n=500$ particles instead of 250.
+
+\subsection{Platform \& Data Collection}
+
+Figure~\ref{figure:testing_platform} shows the data collection platform.
+The pallet jack exposes the floor to the optical flow sensor while allowing the drone to 
+remain level and unobstructed.
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.75\linewidth]{./images/testing_platform.jpg}
+	\caption{The testing platform, in all its glory.}
+	\label{figure:testing_platform}
+\end{figure}
+
+I have marked the landmarks on the floor of V207,
+beginning 1.8m from the wall going into the department of computer science.
+They appear in 15x1.0m intervals, marked with pieces of electrical tape on the floor.
+The distances are measured with a 3.0m, class 2 measuring tape
+(although manually timestamping the landmarks in real time likely introduces more error than the small one of the
+measuring tape).
+At the end of the 15 meter set of points,
+the track turns towards the windows 90 degrees clockwise,
+and continues for 5 meters.
+The 90 degree line was marked using a laser joining to the original line using a square,
+as shown in Figure~\ref{figure:laser}.
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.75\linewidth]{./images/laser.jpg}
+	\caption{Marking the adjoining line, and showing the self-similarity of the floor.}
+	\label{figure:laser}
+\end{figure}
+
+Error rates for the systems are determined using ground truth markers that are manually timestamped
+as the drone is pushed along its path.
+The Cartesian distance between the ground truth and the estimated position is the error at each ground
+truth point, considering only components $x,y$.
